--- a/task03_0606/Views/Products/Edit.cshtml
+++ b/task03_0606/Views/Products/Edit.cshtml
@@ -4,19 +4,27 @@
 
 
 }
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 <!------ Include the above in your HEAD tag ---------->
 <section class="login-block">
     <div class="container">
         <div class="row">
             <div class="col-md-4 login-sec">
-                <h2 class="text-center">Login Now</h2>
+                <h2 class="text-center">新增商品</h2>
                 <form class="login-form">
                     <div class="form-group">
-                        <label for="exampleInputEmail1" class="text-uppercase">Username</label>
+                        <label for="exampleInputEmail1" class="text-uppercase">商品編號</label>
                         <input type="text" class="form-control" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1" class="text-uppercase">商品名稱</label>
+                        <input type="text" class="form-control" placeholder="">
+
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputEmail1" class="text-uppercase">商品價格</label>
+                        <input type="text" class="form-control" placeholder="$">
 
                     </div>
                     <div class="form-group">
@@ -34,7 +42,7 @@
                     </div>
 
                 </form>
-                <div class="copy-text">Created with <i class="fa fa-heart"></i> by <a href="http://grafreez.com">Grafreez.com</a></div>
+                @*<div class="copy-text">Created with <i class="fa fa-heart"></i> by <a href="http://grafreez.com">Grafreez.com</a></div>*@
             </div>
             <div class="col-md-8 banner-sec">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -49,7 +57,7 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="banner-text">
                                     <h2>This is Heaven</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                    <p>Specific foods will often change from year to year with passing fads and become characteristic snacks of Taiwan</p>
                                 </div>
                             </div>
                         </div>
@@ -58,7 +66,8 @@
                             <div class="carousel-caption d-none d-md-block">
                                 <div class="banner-text">
                                     <h2>This is Heaven</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                    <p>I would like to introduce Taiwan night market food to the foreigners mostly. No matter which place we are, we can also taste the diffent snacks and local products in Taiwan.
+</p>
                                 </div>
                             </div>
                         </div>
