--- a/task03_0606/Views/Products/Create.cshtml
+++ b/task03_0606/Views/Products/Create.cshtml
@@ -12,45 +12,87 @@
         <h1>建立新產品</h1>
 
         <form method="post" action="~/Views/Products/ManagerIndex.cshtml">
-            <div class="field name-box">
-                <input type="text" id="productId" placeholder="輸入您的商品編號" />
-                <label for="productId">商品編號</label>
-                <span class="ss-icon">check</span>
-            </div>
+            <section class="login-block">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4 login-sec">
+                            <h2 class="text-center">新增商品</h2>
+                            <form class="login-form">
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1" class="text-uppercase">商品編號</label>
+                                    <input type="text" class="form-control" placeholder="">
 
-            <div class="field email-box">
-                <input type="text" id="title" placeholder="輸入您的商品名稱" />
-                <label for="title">商品名稱</label>
-                <span class="ss-icon">check</span>
-            </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1" class="text-uppercase">商品名稱</label>
+                                    <input type="text" class="form-control" placeholder="">
 
-            <div class="field email-box">
-                <input type="text" id="title" placeholder="輸入您的商品價錢" />
-                <label for="title">商品價錢</label>
-                <span class="ss-icon">check</span>
-            </div>
-            <div class="field email-box">
-                <input type="text" id="introduce" placeholder="輸入您的商品介紹" />
-                <label for="introduce">商品介紹</label>
-                <span class="ss-icon">check</span>
-            </div>
-                <div class="field msg-box">
-                    <from>
-                 <input id="picture" type="file" accept="image/*" onchange="showMyImage(this)"/>
-                <img id="thumbnil" style="width:15%;height:5px margin-top:0px;" src="" alt="image" />
-                    @*<form action="@Url.Action("Upload")" method="post" enctype="multipart/form-data">
-                        <label for="file">Filename:</label>
-                        <input type="file" name="file" id="file" />
-                    </form>*@
-                <label for="msg">商品圖片</label>
-                <span class="ss-icon">check</span>
-           </from> </div>
-            <br/>
-            <br />
-            <input class="button" type="submit" value="確定" /> <input class="button" type="submit" value="取消" />
-        </form>
-    </section>
-</body>
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputEmail1" class="text-uppercase">商品價格</label>
+                                    <input type="text" class="form-control" placeholder="$">
+
+                                </div>
+                                <div class="form-group">
+                                    <label for="exampleInputPassword1" class="text-uppercase">Password</label>
+                                    <input type="password" class="form-control" placeholder="">
+                                </div>
+
+
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" class="form-check-input">
+                                        <small>Remember Me</small>
+                                    </label>
+                                    <button type="submit" class="btn btn-login float-right">Submit</button>
+                                </div>
+
+                            </form>
+                            @*<div class="copy-text">Created with <i class="fa fa-heart"></i> by <a href="http://grafreez.com">Grafreez.com</a></div>*@
+                        </div>
+                        <div class="col-md-8 banner-sec">
+                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                                </ol>
+                                <div class="carousel-inner" role="listbox">
+                                    <div class="carousel-item active">
+                                        <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <div class="banner-text">
+                                                <h2>This is Heaven</h2>
+                                                <p>Specific foods will often change from year to year with passing fads and become characteristic snacks of Taiwan</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block img-fluid" src="https://images.pexels.com/photos/7097/people-coffee-tea-meeting.jpg" alt="First slide">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <div class="banner-text">
+                                                <h2>This is Heaven</h2>
+                                                <p>
+                                                    I would like to introduce Taiwan night market food to the foreigners mostly. No matter which place we are, we can also taste the diffent snacks and local products in Taiwan.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img class="d-block img-fluid" src="https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg" alt="First slide">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <div class="banner-text">
+                                                <h2>This is Heaven</h2>
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+            </section>
 
 
 <form method="post" action="">
@@ -79,8 +121,24 @@
                 <img id="thumbnil" style="width:20%; margin-top:10px;" src="" alt="image" />
 
             </div>
-           
-            <button type="submit">確定</button>
+            <div class="field msg-box">
+                <from>
+                    <input id="picture" type="file" accept="image/*" onchange="showMyImage(this)" />
+                    <img id="thumbnil" style="width:15%;height:5px margin-top:0px;" src="" alt="image" />
+                    @*<form action="@Url.Action("Upload")" method="post" enctype="multipart/form-data">
+                            <label for="file">Filename:</label>
+                            <input type="file" name="file" id="file" />
+                        </form>*@
+                    <label for="msg">商品圖片</label>
+                    <span class="ss-icon">check</span>
+                </from>
+            </div>
+            <br />
+            <br />
+            <input class="button" type="submit" value="確定" /> <input class="button" type="submit" value="取消" />
+</form>
+
+<button type="submit">確定</button>
         </div>
 </form>
 
