--- a/task03_0606/Views/Products/Create.cshtml
+++ b/task03_0606/Views/Products/Create.cshtml
@@ -9,8 +9,6 @@
     @Html.AntiForgeryToken()
 
     <section id="hire">
-        <h1>建立新產品</h1>
-
         <form method="post" action="~/Views/Products/ManagerIndex.cshtml">
             <section class="login-block">
                 <div class="container">
@@ -34,18 +32,27 @@
 
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1" class="text-uppercase">Password</label>
-                                    <input type="password" class="form-control" placeholder="">
+                                    <label for="exampleInputPassword1" class="text-uppercase">商品介紹</label>
+                                    <input type="text" class="form-control" placeholder="">
                                 </div>
 
 
-                                <div class="form-check">
-                                    <label class="form-check-label">
-                                        <input type="checkbox" class="form-check-input">
-                                        <small>Remember Me</small>
-                                    </label>
-                                    <button type="submit" class="btn btn-login float-right">Submit</button>
+                                <div class="form-group">
+                                    <label for="exampleInputPassword1" class="text-uppercase">商品檔案</label>
+                                    <div class="col-md-6">
+                                        <input type="file" accept="image/*" onchange="showMyImage(this)" />
+                                        <br />
+                                        <img id="thumbnil" style="width:100%;" src="" alt="image" />
+
+                                    </div>
                                 </div>
+                                <div class="pull-right">
+                                    <input type="submit" value="確認" class="btn btn-default" />|<input type="submit" value="取消" class="btn btn-default right" />
+                                </div>
+                                      
+                              
+                                   
+                            
 
                             </form>
                             @*<div class="copy-text">Created with <i class="fa fa-heart"></i> by <a href="http://grafreez.com">Grafreez.com</a></div>*@
@@ -95,7 +102,7 @@
             </section>
 
 
-<form method="post" action="">
+@*<form method="post" action="">
     <div class="form-group">
 
         <div class="col-md-6">
@@ -129,7 +136,7 @@
                             <label for="file">Filename:</label>
                             <input type="file" name="file" id="file" />
                         </form>*@
-                    <label for="msg">商品圖片</label>
+                    @*<label for="msg">商品圖片</label>
                     <span class="ss-icon">check</span>
                 </from>
             </div>
@@ -143,4 +150,4 @@
 </form>
 
 
-<hr />
+<hr />*@
