--- a/task03_0606/Views/Products/Edit.cshtml
+++ b/task03_0606/Views/Products/Edit.cshtml
@@ -10,37 +10,36 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 login-sec">
-                <h2 class="text-center">新增商品</h2>
+                <h2 class="text-center">修改商品</h2>
                 <form class="login-form">
                     <div class="form-group">
                         <label for="exampleInputEmail1" class="text-uppercase">商品編號</label>
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control" placeholder="16">
 
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1" class="text-uppercase">商品名稱</label>
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control" placeholder="豚骨拉麵">
 
                     </div>
                     <div class="form-group">
                         <label for="exampleInputEmail1" class="text-uppercase">商品價格</label>
-                        <input type="text" class="form-control" placeholder="$">
+                        <input type="text" class="form-control" placeholder="$220">
 
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1" class="text-uppercase">Password</label>
-                        <input type="password" class="form-control" placeholder="">
+                        <label for="exampleInputPassword1" class="text-uppercase">商品介紹</label>
+                        <input type="text" class="form-control" placeholder="傳承日本師傅的精神，耗時費力的自製麵條，以及讓您回味無窮的湯頭！">
                     </div>
 
 
-                    <div class="form-check">
-                        <label class="form-check-label">
-                            <input type="checkbox" class="form-check-input">
-                            <small>Remember Me</small>
-                        </label>
-                        <button type="submit" class="btn btn-login float-right">Submit</button>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1" class="text-uppercase">商品檔案</label>
+                        <input type="text" class="form-control" placeholder="C13.jpg">
                     </div>
-
+                    <div class="pull-right">
+                    <input type="submit" value="確認" class="btn btn-default" />|<input type="submit" value="取消" class="btn btn-default right" />
+                        </div>
                 </form>
                 @*<div class="copy-text">Created with <i class="fa fa-heart"></i> by <a href="http://grafreez.com">Grafreez.com</a></div>*@
             </div>
