--- a/task03_0606/Views/Cart/Index.cshtml
+++ b/task03_0606/Views/Cart/Index.cshtml
@@ -82,7 +82,7 @@
  }
 </style>
 
-<div>
+<div class="container">
 
 
     <table class="table table-hover table-responsive-sm rwd-table">
@@ -134,6 +134,99 @@
         </tr>
 
     </table>
+
+   
+        <div class="row d-sm-table" style="background-color:#ddd">
+          
+
+            <div class="h-100 w-100 d-sm-table-row p-sm-1 bg-warning" style="height:50px" >
+                
+                <div class="h-30 w-30 d-sm-table-cell p-2  bg-info">
+                    <img class="img-fluid" width="100%" height="100%" src="~/picture/1610141734150000001.jpg" />
+                </div>
+
+                <div class="h-50 w-20 d-sm-table-cell p-2 bg-danger">
+                    產品編號：1
+                    產品名稱：可樂
+                    店家編號：1
+                    店家名稱：麥當勞
+                 </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-info">
+               
+                    數量：<input size="1" style="text-align:right;" value="2" />
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-danger">
+                
+                    單價：30
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-info">
+                
+                    小計：60
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-danger">
+                 
+                    備註：<input size="5" style="text-align:right;" />
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-dark">
+               
+                    <a href="~/#/Delete?productID=1" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </a> 
+                </div>
+
+            </div>
+           
+  
+            <div class="h-100 w-100 d-sm-table-row p-sm-1 bg-warning" style="height:50px">
+
+                <div class="h-30 w-30 d-sm-table-cell p-2  bg-info">
+                    <img class="img-fluid" width="100%" height="100%" src="~/picture/1610141734150000001.jpg" />
+                </div>
+
+                <div class="h-50 w-20 d-sm-table-cell p-2 bg-danger">
+                    
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-info">
+
+                    數量：<input size="1" style="text-align:right;" value="2" />
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-danger">
+
+                    單價：30
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-info">
+
+                    小計：60
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-danger">
+
+                    備註：<input size="5" style="text-align:right;" />
+                </div>
+
+                <div class="h-25 w-10  d-sm-table-cell p-2  bg-dark">
+
+                    <a href="~/#/Delete?productID=1" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
+                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                    </a>
+                </div>
+
+            </div>
+
+        
+    </div>
+
+
+   
+
     <div class="pull-right">
         共 2 項，總計：1500 元
         <a href="~/#/Payment" class="btn btn-sm btn-success"><i class="fa fa-fw fa-dollar"></i>結帳</a>
