餐廳菜單 分頁功能

--- a/task03_0606/Views/Home/RestaurentMemberPage.cshtml
+++ b/task03_0606/Views/Home/RestaurentMemberPage.cshtml
@@ -17,7 +17,28 @@
         position: relative;
     }
 
-</style>
+     .item {
+            padding: 0;
+            width: 860px;
+            zoom: 1;
+        }
+
+     .item li {
+            list-style-type: none;
+            float: left;
+            background: #F69;
+            font-size: 60px;
+            text-shadow: 1px 1px 3px #555;
+            width: 380px;
+            height: 200px;
+            margin: 10px 40px 10px 0;
+            line-height: 200px;
+            text-align: center;
+            color: #fff;
+        }
+    </style>
+
+
 
 
 <ol class="breadcrumb">
@@ -28,7 +49,7 @@
 
         <div class="card-header">
             <h5 class="card-title">@Model.MemberName</h5>
-            <img class="card-header-icon" src="~/picture/1602181025050000001.jpg" title="麥當勞" />
+            <img class="card-header-icon" src="~/picture/1602181025050000001.jpg" style="opacity: 0.5;" title="麥當勞" />
             <p>「麥當勞」是全世界最大的快速餐飲服務餐廳領導品牌。麥當勞在一九五五年開業之初只是伊利諾州 Des Plaines 一間街坊餐廳,但時至今日,已在全球超過一百個國家設立了超過三萬間餐廳,成為全球最大的快餐服務機構。麥當勞的新精神 i'm lovin' it更是盡興表現自己並享受生活在其中。</p>
 
         </div>
@@ -51,8 +72,155 @@
                     </ul>
                 </div>
                 <div class="card-body">
+                    <div class="row card-deck main">
+                        <div class="item">
+                            <ul class="clear">
+                                <li>
+                                    <div class="card col-sm-3">
+    <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+    <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <label class="card-text" id="ProductName">可樂(中)</label>
+        <label class="card-text" id="MemberID">1</label>
+        <label class="card-text" id="UnitPrice">30</label>
+    </div>
+    <div class="card-footer">
+        <a href="#">加入購物車</a>
+    </div>
+</div>
+                                
+                                </li>
+                                <li>
+                                    <div class="card col-sm-3">
+                                        <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <label class="card-text" id="ProductName">可樂(中)</label>
+                                            <label class="card-text" id="MemberID">1</label>
+                                            <label class="card-text" id="UnitPrice">30</label>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#">加入購物車</a>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="card col-sm-3">
+                                        <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <label class="card-text" id="ProductName">可樂(中)</label>
+                                            <label class="card-text" id="MemberID">1</label>
+                                            <label class="card-text" id="UnitPrice">30</label>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#">加入購物車</a>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="card col-sm-3">
+                                        <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <label class="card-text" id="ProductName">可樂(中)</label>
+                                            <label class="card-text" id="MemberID">1</label>
+                                            <label class="card-text" id="UnitPrice">30</label>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#">加入購物車</a>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="card col-sm-3">
+                                        <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <label class="card-text" id="ProductName">可樂(中)</label>
+                                            <label class="card-text" id="MemberID">1</label>
+                                            <label class="card-text" id="UnitPrice">30</label>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#">加入購物車</a>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="card col-sm-3">
+                                        <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <label class="card-text" id="ProductName">可樂(中)</label>
+                                            <label class="card-text" id="MemberID">1</label>
+                                            <label class="card-text" id="UnitPrice">30</label>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#">加入購物車</a>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>
+                                    <div class="card col-sm-3">
+                                        <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Card title</h5>
+                                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                            <label class="card-text" id="ProductName">可樂(中)</label>
+                                            <label class="card-text" id="MemberID">1</label>
+                                            <label class="card-text" id="UnitPrice">30</label>
+                                        </div>
+                                        <div class="card-footer">
+                                            <a href="#">加入購物車</a>
+                                        </div>
+                                    </div>
+
+                                </li>
+                                <li>8</li>
+                                <li>9</li>
+                                <li>10</li>
+                                <li>11</li>
+                                <li>12</li>
+                                <li>13</li>
+                                <li>14</li>
+                                <li>15</li>
+                                <li>16</li>
+                                <li>17</li>
+                                <li>18</li>
+                                <li>19</li>
+                                <li>20</li>
+                                <li>21</li>
+                                <li>22</li>
+                                <li>23</li>
+                                <li>24</li>
+                                <li>25</li>
+                                <li>26</li>
+                                <li>27</li>
+                                <li>28</li>
+                            </ul>
+                        </div>
+                        <div class="page_btn clear">
+                            <span class="page_box">
+                                <a class="prev">上一頁</a>
+                                <span class="num"><span class="current_page">1</span><span style="padding:0 3px;">/</span><span class="total"></span></span>
+                                <a class="next">下一頁</a>
+                            </span>
+                        </div>
+                    </div>
+
                    @*產品卡片*@
-                    <div class="row card-deck">
+                    @*<div class="row card-deck">
                         <div class="card col-sm-3">
                             <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -81,6 +249,7 @@
                                 <a href="#">加入購物車</a>
                             </div>
                         </div>
+
                         <div class="card  col-sm-3">
                             <img class="card-img-top" src="~/picture/1610141734150000001.jpg" alt="Card image cap">
                             <div class="card-body">
@@ -102,7 +271,7 @@
                                 <small class="text-muted">Last updated 3 mins ago</small>
                             </div>
                         </div>
-                    </div>
+                    </div>*@
 
                 </div>
             </div>
