--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<task03_0606.Models.Class1>
+﻿@model IEnumerable<task03_0606.Models.myfoodproduct>
 
 @{
     ViewBag.Title = "ManagerIndex";
