--- a/task03_0606/Views/Products/Index.cshtml
+++ b/task03_0606/Views/Products/Index.cshtml
@@ -21,7 +21,7 @@
      
             </div>
         </div>
-        <div class="card" style="width:200px">
+        @*<div class="card" style="width:200px">
             <img class="card-img-top" src="~/photo/productsindex/dessert_resized.jpg" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">美味甜點</h5>
@@ -64,6 +64,6 @@
 
     </div>
 
-   </div>
+   </div>*@
 
    
