--- a/task03_0606/Views/Member/Login.cshtml
+++ b/task03_0606/Views/Member/Login.cshtml
@@ -13,7 +13,7 @@
             <form method="post" action="">
                 <div class="form-group">
                     <label for="phoneNum">手機號碼：</label>
-                    <input class="form-control" id="phoneNum" name="phoneNum" type="tel" maxlength="10" pattern="([0]{1})([9]{1})(\d{8})" required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
+                    <input class="form-control" id="phoneNum" name="phoneNum" type="tel" required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">密碼：</label>
