--- a/task03_0606/Views/Member/Login.cshtml
+++ b/task03_0606/Views/Member/Login.cshtml
@@ -30,7 +30,7 @@
                 <button type="submit" class="btn btn-primary btn-block">登入</button>
             </form>
             <div class="text-center">
-                <a class="d-block small mt-3" href="/Member/Register">註冊帳號</a>
+                <a class="d-block small mt-3" href="/Member/EasyRegister">註冊帳號</a>
                 <a class="d-block small" href="/Member/ForgotPassword">忘記密碼?</a>
             </div>
         </div>
