--- a/task03_0606/Views/Member/EditPersonalData.cshtml
+++ b/task03_0606/Views/Member/EditPersonalData.cshtml
@@ -36,24 +36,13 @@
                 </div>
                 <div class="form-group">
 
-                    <label for="Email1" id="EmailID">電子信箱 @Html.Raw(ViewBag.html)</label>
+                    <label for="Email1" id="EmailID">電子信箱</label>
                     <input class="form-control" id="Email1" name="Email1" value="@ViewBag.Email1" type="email" required="required" aria-describedby="emailHelp" placeholder="請輸入電子信箱...">
                 </div>
+                
                 <div class="form-group">
-                    <div class="form-row">
-                        <div class="col-md-6">
-                            <label for="Password1">密碼</label>
-                            <input class="form-control" id="Password1" name="Password1" value="@ViewBag.Password1" type="password" required="required" placeholder="請輸入密碼...">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="ConfirmPassword" id="ConfPwdLabel">確認密碼</label>
-                            <input class="form-control" id="ConfirmPassword" name="ConfirmPassword" value="@ViewBag.ConfirmPassword" type="password" required="required" placeholder="確認密碼...">
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="cellPhone">手機號碼</label>
-                    <input class="form-control" id="cellPhone" name="cellPhone" value="@ViewBag.cellPhone" type="tel" maxlength="10" pattern="([0]{1})([9]{1})(\d{8})" required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
+                    <label for="cellPhone">手機號碼 @Html.Raw(ViewBag.html)</label>
+                    <input class="form-control" id="cellPhone" name="cellPhone" value="@ViewBag.cellPhone" type="tel" maxlength="10" pattern="([0]{1})([9]{1})(\d{8})" readonly required aria-describedby="telHelp" placeholder="請輸入手機號碼...">
                 </div>
 
 
