修改會員資料，sweetAlert

--- a/task03_0606/Views/Member/EditPersonalData.cshtml
+++ b/task03_0606/Views/Member/EditPersonalData.cshtml
@@ -159,4 +159,14 @@
     $("#Email1").blur(function () {
         regForm.submit();
     })
+
+    $("document").ready(function () {
+        if (@ViewBag.sweetAlert == 1) {
+            swal(
+                '資料已修改！',
+                '',
+                'success'
+            )
+        }
+    })
 </script>
