--- a/task03_0606/Views/_Member_SuperUser_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Member_SuperUser_LayoutPage1.cshtml
@@ -21,8 +21,9 @@
     <link href="/css/sb-admin.css" rel="stylesheet">
     <link href="/css/yi.css" rel="stylesheet">
     <script src="/js/jquery-3.2.1.slim.min.js"></script>
-    <script src="/js/jquery.twzipcode.min.js"></script>
     <script src="/js/yi.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
+   
 
 
 </head>
